--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Water Reminder</string>
+
+    <string name="home_label">Home</string>
+    <string name="statistics_label">Statistics</string>
+    <string name="settings_label">Settings</string>
 </resources>
